@@ -1,0 +1,9 @@
+package org.testng.xml.issue2866;
+
+import org.testng.annotations.Test;
+
+public class BTestClassSample {
+
+  @Test
+  public void fictitiousTest() {}
+}
